2002-10-14  Earnie Boyd  <earnie@users.sf.net>

	* Makefile.in: Add components for lib/ddk.  Adjust for autoconf-2.53.
	* configure.in: Ditto.
	* lib/Makefile.in: Ditto.
	* lib/ddk/Makefile.in: Correct installation procedure.  Adjust for
	autoconf-2.53.
	* configure: Regenerate.

2002-10-14  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/windows.h: Don't include basetyps.h.
	* include/objfwd.h: Do include basetyps.h.

2002-10-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/objbase.h: Include rpc.h and rpcndr.h
	before header guard.

2002-10-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/olectl.h (PROPPAGEINFO): Change type of
	field cb to ULONG.

2002-10-11  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* lib/ntdll.def (RtlAcquireResourceExclusive,
	RtlAcquireResourceShared, RtlDeleteResource,
	RtlInitializeResource, RtlReleaseResource,
	RtlTimeToSecondsSince1970) : Added missing exports.

2002-10-08  Heiko Gerdau  <hg@technosis.de>

	* include/oleacc.h: New file.
	* include/winuser.h (ENDSESSION_LOGOFF) Add define.
	(OBJID_*) Add defines.
	* lib/uuid.c: Add DEFINE_GUID for IID_IAccessible.
	* lib/test.c: Include oleacc.h.

2002-10-06  Casper Hornstrup  <chorns@it.dk>

	* include/ddk: New subdir.
	* lib/ddk: Ditto.
	* include/ddk/(atm.h, batclass.h, cfg.h, cfgmgr32.h, d4drvif.h,
	d4iface.h, ddkmapi.h, hidclass.h, hidpi.h, hidusage.h, mcd.h,
	miniport.h, minitape.h, mountdev.h, mountmgr.h, ndis.h,
	ndisquid.h, ndistapi.h, ndisvan.h, netevent.h, netpnp.h,
	netdev.h, ntapi.h, ntdd8042.h, ntddbeep.h, ntddcdrm.h,
	ntddcdvd.h, ntddchgr.h, ntdddisk.h, ntddk.h, ntddkbd.h,
	ntddmou.h, ntddndis.h, ntddpar.h, ntddpcm.h, ntddscsi.h,
	ntddser.h, ntddstor.h, ntddtape.h, ntddtdi.h, ntddvdeo.h,
	ntddvol.h, ntifs.h, ntpoapi.h, ntstatus.h, parallel.h, pfhook.h,
	poclass.h, scsi.h, scsiscan.h, scsiwmi.h, smbus.h, srb.h,
	storport.h, tdi.h, tdiinfo.h, tdikrnl.h, tdistat.h, tvout.h,
	upssvc.h, usb.h, usb100.h, usbcamdi.h, usbdi.h, usbioctl.h,