@@ -138,12 +138,12 @@ extern "C" {
 #define DM_DISPLAYFREQUENCY 0x400000
 #define CDS_UPDATEREGISTRY	1
 #define CDS_TEST	2
-#define CDS_FULLSCREEN	4 
-#define CDS_GLOBAL	8 
+#define CDS_FULLSCREEN	4
+#define CDS_GLOBAL	8
 #define CDS_SET_PRIMARY	16
-#define CDS_RESET	0x40000000 
-#define CDS_SETRECT	0x20000000 
-#define CDS_NORESET	0x10000000 
+#define CDS_RESET	0x40000000
+#define CDS_SETRECT	0x20000000
+#define CDS_NORESET	0x10000000
 #define DISP_CHANGE_SUCCESSFUL	0
 #define DISP_CHANGE_RESTART	1
 #define DISP_CHANGE_BADFLAGS	(-4)
@@ -971,7 +971,7 @@ extern "C" {
 #define MOUSEEVENTF_RIGHTUP 16
 #define MOUSEEVENTF_MIDDLEDOWN 32
 #define MOUSEEVENTF_MIDDLEUP 64
-#define MOUSEEVENTF_WHEEL 0x0800 
+#define MOUSEEVENTF_WHEEL 0x0800
 #define MOUSEEVENTF_ABSOLUTE 32768
 #define PM_NOREMOVE 0
 #define PM_REMOVE 1
@@ -2537,7 +2537,7 @@ typedef struct tagHELPWININFOW {
 	int wMax;
 	WCHAR rgchMember[2];
 } HELPWININFOW,*PHELPWININFOW,*LPHELPWININFOW;
-typedef struct tagSTYLESTRUCT {  
+typedef struct tagSTYLESTRUCT { 
 	DWORD styleOld;
 	DWORD styleNew;
 } STYLESTRUCT,*LPSTYLESTRUCT;
@@ -2584,7 +2584,7 @@ typedef struct tagMENUINFO {
 	DWORD   dwContextHelpID;
 	ULONG_PTR dwMenuData;
 } MENUINFO, *LPMENUINFO;
-typedef MENUINFO CONST *LPCMENUINFO; 
+typedef MENUINFO CONST *LPCMENUINFO;
 #define CCHILDREN_SCROLLBAR 5
 typedef struct tagSCROLLBARINFO {
 	DWORD cbSize;
@@ -2623,6 +2623,21 @@ typedef struct tagMONITORINFO {
 	RECT rcWork;
 	DWORD dwFlags;
 } MONITORINFO,*LPMONITORINFO;
+#define CCHDEVICENAME 32
+typedef struct tagMONITORINFOEXA {
+	DWORD	cbSize;
+	RECT	rcMonitor;
+	RECT	rcWork;
+	DWORD	dwFlags;
+	CHAR	szDevice[CCHDEVICENAME];
+} MONITORINFOEXA, *LPMONITORINFOEXA;
+typedef struct tagMONITORINFOEXW {
+	DWORD	cbSize;
+	RECT	rcMonitor;
+	RECT	rcWork;
+	DWORD	dwFlags;
+	WCHAR	szDevice[CCHDEVICENAME];
+} MONITORINFOEXW, *LPMONITORINFOEXW;
 typedef struct tagKBDLLHOOKSTRUCT {
 	DWORD vkCode;
 	DWORD scanCode;
@@ -3193,7 +3208,7 @@ LONG WINAPI SetWindowLongW(HWND,int,LONG);
 #ifdef _WIN64
 LONG_PTR WINAPI SetWindowLongPtrA(HWND,int,LONG_PTR);
 LONG_PTR WINAPI SetWindowLongPtrW(HWND,int,LONG_PTR);
-#else 
+#else
 #define SetWindowLongPtrA SetWindowLongA
 #define SetWindowLongPtrW SetWindowLongW
 #endif
@@ -3280,6 +3295,7 @@ typedef CREATESTRUCTW CREATESTRUCT, *LPCREATESTRUCT;
 typedef CBT_CREATEWNDW CBT_CREATEWND, *LPCBT_CREATEWND;
 typedef MDICREATESTRUCTW MDICREATESTRUCT,*LPMDICREATESTRUCT;
 typedef MULTIKEYHELPW MULTIKEYHELP,*PMULTIKEYHELP,*LPMULTIKEYHELP;
+typedef MONITORINFOEXW MONITORINFOEX, *LPMONITORINFOEX;
 #define AppendMenu AppendMenuW
 #define CallWindowProc CallWindowProcW
 #define ChangeDisplaySettings ChangeDisplaySettingsW
@@ -3433,6 +3449,7 @@ typedef CREATESTRUCTA CREATESTRUCT, *LPCREATESTRUCT;
 typedef CBT_CREATEWNDA CBT_CREATEWND, *LPCBT_CREATEWND;
 typedef MDICREATESTRUCTA MDICREATESTRUCT,*LPMDICREATESTRUCT;
 typedef MULTIKEYHELPA MULTIKEYHELP,*PMULTIKEYHELP,*LPMULTIKEYHELP;
+typedef MONITORINFOEXA MONITORINFOEX, *LPMONITORINFOEX;
 #define AppendMenu AppendMenuA
 #define CallWindowProc CallWindowProcA
 #define ChangeDisplaySettings ChangeDisplaySettingsA
