@@ -1,3 +1,9 @@
+2002-10-16  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/winuser.h (MONITORINFOEX[AW]): Add structure
+	definitions and ANSI/UNICODE mappings.
+	Cleanup whitespace.
+
 2002-10-14  Earnie Boyd  <earnie@users.sf.net>
 
 	* Makefile.in: Add components for lib/ddk.  Adjust for autoconf-2.53.
